# pc-crash-kit

./: .gitattributes  .gitignore  LICENSE  README.md  pc-crash-kit.toml  pyproject.toml
.github/: issue_template.md  pull_request_template.md
scripts/: collect-crash-artifacts.ps1  doctor-checks.ps1  export-eventlogs.ps1  pc-crash-kit  pc-crash-kit-wsl.sh  pc-crash-kit.cmd  pc-crash-kit.ps1  setup-poetry-path.ps1  system-info.ps1
src/crashkit/: analyze.py
src/pc_crash_kit/: __init__.py  cli.py  collect.py  doctor.py  summarize.py  utils.py
tests/: test_smoke.py  test_summarize_integration.py
tools/: patch_utf8sig.py
